# MarkovChain

./: CMakeLists.txt  Dictionary.h  MarcovChain.h  MarcovChain.pro  MarkovChain.h  Node.h  README.md  dict.h  main.cpp  simple_test_app.cpp
.github/workflows/: codeql-analysis.yml
